Fixed spacing issue

--- a/src/sass/custom/public/projects.scss
+++ b/src/sass/custom/public/projects.scss
@@ -1,5 +1,5 @@
 .public-projects-logged-in-content {
-	padding-top: $margin-40;
+	padding-top: 80px;
 	overflow-x: hidden;
 
 	header {
